--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-dropdown-select": "^4.11.4",
     "react-router-dom": "^7.1.1",
     "silan-dental-clinic": "file:"
   },
