--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "@types/firebase": "^2.4.32",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-dropdown-select": "^4.11.4",
