--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "react-chartjs-2": "^5.3.0"
+    "chart.js": "^4.4.7",
+    "react-chartjs-2": "^5.3.0",
+    "react-router-dom": "^7.1.3"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.8"
   }
 }
