--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^11.11.1"
+    "firebase-admin": "^11.11.1",
+    "server": "file:"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
